# aria-agent

./: .env.example  .gitignore  .railwayignore  Dockerfile  README.md  brand.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
aria/: alerts.py  api.py  config.py  main.py  models.py  regime.py
aria/brain/: __init__.py  live.py  prompt.py
aria/data/: cmc_ids.json  eligible_tokens.json  eligible_tokens_resolved.json
aria/execution/: __init__.py  manager.py  paper.py  twak_client.py
aria/safety/: __init__.py  compliance.py  window.py
aria/signals/: client.py  cmc_client.py  parsing.py
aria/state/: db.py
aria/strategies/: __init__.py  base.py  breakout.py  confirm.py  mean_reversion.py  narrative_rotation.py  preservation.py
dashboard/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
dashboard/src/: App.tsx  index.css
deploy/: env.example  railway-start.sh
docs/: DESIGN.md  HOSTING.md  STRATEGY.md
probes/: cmc_mcp_probe.py  twak_probe.sh
scripts/: dashboard.sh  dust_trade.py  paper_replay.py  paper_trade.sh  probe_balances.py  probe_sell.py  probe_swappable.py  replay_scenario.py  resolve_addresses.py  run_agent.sh
tests/: test_api.py  test_brain.py  test_circuit_breaker_integration.py  test_cmc_retry.py  test_confirm.py  test_execution.py  test_exits.py  test_judge.py  test_loop.py  test_paper.py  test_regime.py  test_safety.py  test_signals.py  test_strategies.py  test_window.py
tests/fixtures/: cmc_get_crypto_marketcap_technical_analysis.json  cmc_get_crypto_quotes_latest.json  cmc_search_cryptos.json  (+5 more)
(+24 files in other folders)
