[project]
name = "aria-agent"
version = "0.1.0"
description = "ARIA — Adaptive Regime Intelligence Agent (BNB Hack: AI Trading Agent Edition)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "anthropic>=0.100",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
